--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Charless-Business-Consulting</title>
-    <link rel="stylesheet" href="./CSS/output.css">
+    <link rel="stylesheet" href="./CSS/output.css" />
 
     <!-- font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <section id="navbar">
-        <div class="">
-           
+      <div
+        class="flex flex-col md:justify-between md:px-16 py-10 md:flex-row justify-center items-center"
+      >
+        <img class="h-[60px]" src="./image/logo/asset 0.png" alt="" />
+        <div class="flex gap-12">
+          <div class="invisible md:visible flex items-center gap-3">
+            <i class="fa-solid fa-location-dot text-4xl text-[#001A57]"></i>
+            <div class="">
+              <h1 class="text-lg text-gray-800">Address:</h1>
+              <p class="text-lg text-gray-600">2A0, Queenstown St, USA.</p>
+            </div>
+          </div>
+          <div class="invisible md:visible h-10 w-[1px] bg-gray-200"></div>
+          <div class="flex items-center gap-3 invisible md:visible">
+            <i class="fa-regular fa-envelope-open text-4xl text-[#001A57]"></i>
+            <div>
+              <h1 class="text-lg text-gray-800">Mail us:</h1>
+              <p class="text-lg text-gray-600">supporthere@mail.com</p>
+            </div>
+          </div>
+
+          <button
+            class="bg-transparent border-2 border-[#001A57] rounded-[5px] px-5 py-2 hover:bg-[#001A57] transition cursor-pointer hover:text-white font-medium invisible md:visible"
+          >
+            GET A QUOTES
+          </button>
         </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
