--- a/index.html
+++ b/index.html
@@ -39,11 +39,43 @@
           </div>
 
           <button
-            class="bg-transparent border-2 border-[#001A57] rounded-[5px] px-5 py-2 hover:bg-[#001A57] transition cursor-pointer hover:text-white font-medium invisible md:visible"
+            class="bg-transparent border-2 border-[#001A57] rounded-[5px] px-5 py-1 hover:bg-[#001A57] transition cursor-pointer hover:text-white font-medium invisible md:visible"
           >
             GET A QUOTES
           </button>
         </div>
+      </div>
+
+      <div id="navbar" class=" bg-[#000F32] px-[40px] py-[25px] w-[90%] mx-auto text-white relative">
+        <div class="flex justify-between gap-6 items-center relative">
+          <ul class="flex gap-6 ">
+            <li class="text-white cursor-pointer">HOME</li>
+            <div>/</div>
+            <li class="text-gray-400 hover:text-white cursor-pointer">PAGE</li>
+             <div>/</div>
+            <li class="text-gray-400 hover:text-white cursor-pointer">SERVICE</li>
+            <div>/</div>
+            <li class="text-gray-400 hover:text-white cursor-pointer">PORTOFOLIS</li>
+            <div>/</div>
+            <li class="text-gray-400 hover:text-white cursor-pointer">BLOG</li>
+            <div>/</div>
+            <li class="text-gray-400 hover:text-white cursor-pointer">CONTACT</li>
+          </ul>
+          <div id="socailIcon" class="flex gap-3 text-[13px] absolute right-[110px] text-gray-200 hover:text-white cursor-pointer">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-pinterest"></i>
+          </div>
+         
+          <div id="cartIcon" class="flex gap-7">
+             <i class="fa-solid fa-cart-shopping "></i>
+             <i class="fa-solid fa-magnifying-glass "></i>
+          </div>
+          
+        </div>
+         <div class="w-[1px] h-[73px] bg-gray-700  absolute  right-[70px] top-[0.5px] "></div>
+         <div class="w-[1px] h-[73px] bg-gray-700  absolute  right-[130px] top-[0.5px] "></div>
       </div>
     </section>
   </body>
