make navbar responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <section id="navbar">
       <div
-        class="flex flex-col md:justify-between md:px-16 py-10 md:flex-row justify-center items-center"
+        class="flex flex-col md:justify-between md:px-16 py-10 md:flex-row justify-center items-center "
       >
         <img class="h-[60px]" src="./image/logo/asset 0.png" alt="" />
         <div class="flex gap-12">
@@ -46,9 +46,9 @@
         </div>
       </div>
 
-      <div id="navbar" class=" bg-[#000F32] px-[40px] py-[25px] w-[90%] mx-auto text-white relative">
-        <div class="flex justify-between gap-6 items-center relative">
-          <ul class="flex gap-6 ">
+      <div id="navbar" class=" bg-[#000F32] px-[40px] py-[25px] md:w-[90%] mx-auto text-white relative">
+        <div class="flex justify-between gap-6 items-center  relative">
+          <ul class="hidden md:flex gap-6 ">
             <li class="text-white cursor-pointer">HOME</li>
             <div>/</div>
             <li class="text-gray-400 hover:text-white cursor-pointer">PAGE</li>
@@ -61,6 +61,7 @@
             <div>/</div>
             <li class="text-gray-400 hover:text-white cursor-pointer">CONTACT</li>
           </ul>
+          <i class="fa-solid fa-bars md:hidden text-xl cursor-pointer"></i>
           <div id="socailIcon" class="flex gap-3 text-[13px] absolute right-[110px] text-gray-200 hover:text-white cursor-pointer">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
@@ -74,8 +75,8 @@
           </div>
           
         </div>
-         <div class="w-[1px] h-[73px] bg-gray-700  absolute  right-[70px] top-[0.5px] "></div>
-         <div class="w-[1px] h-[73px] bg-gray-700  absolute  right-[130px] top-[0.5px] "></div>
+         <div class="w-[1px] h-[65px] md:h-[73px] bg-gray-700  absolute  right-[70px] top-[0.5px] "></div>
+         <div class="w-[1px] h-[65px] md:h-[73px] bg-gray-700  absolute  right-[130px] top-[0.5px] "></div>
       </div>
     </section>
   </body>
