--- a/index.html
+++ b/index.html
@@ -61,7 +61,20 @@
             <div>/</div>
             <li class="text-gray-400 hover:text-white cursor-pointer">CONTACT</li>
           </ul>
-          <i class="fa-solid fa-bars md:hidden text-xl cursor-pointer"></i>
+          <ul id="menu" class=" hidden flex-col gap-6 bg-white w-[100%] justify-center absolute top-[40px] font-medium py-2 ">
+            <li class="text-[#001A57] cursor-pointer ml-3">HOME</li>
+            <div class="">/</div>
+            <li class="text-gray-600  hover:text-[#001A57] cursor-pointer ml-3">PAGE</li>
+             <div>/</div>
+            <li class="text-gray-600  hover:text-[#001A57] cursor-pointer ml-3">SERVICE</li>
+            <div>/</div>
+            <li class="text-gray-600  hover:text-[#001A57] cursor-pointer ml-3">PORTOFOLIS</li>
+            <div>/</div>
+            <li class="text-gray-600  hover:text-[#001A57] cursor-pointer ml-3">BLOG</li>
+            <div>/</div>
+            <li class="text-gray-600  hover:text-[#001A57] cursor-pointer ml-3">CONTACT</li>
+          </ul>
+          <i id="menuIcon" class="fa-solid fa-bars visible md:invisible text-xl cursor-pointer"></i>
           <div id="socailIcon" class="flex gap-3 text-[13px] absolute right-[110px] text-gray-200 hover:text-white cursor-pointer">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
@@ -80,5 +93,9 @@
       </div>
     </section>
     <section id="hero" class="bg-gray-200 h-[100vh]"></section>
+
+
+
+    <script src="main.js"></script>
   </body>
 </html>
