--- a/index.html
+++ b/index.html
@@ -92,9 +92,14 @@
          <div class="w-[1px] h-[59px] md:h-[73px] bg-gray-700  absolute  right-[130px] top-[0.5px] "></div>
       </div>
     </section>
-    <section id="hero" class="bg-gray-200 h-[100vh]"></section>
-
-
+    <section id="hero" class="bg-gray-200 h-[100vh] bg-[url('/image/hero-image/asset 1.jpeg')]
+ bg-cover">
+      
+    </section>
+    
+      <div>
+        <h1></h1>
+      </div>
 
     <script src="main.js"></script>
   </body>
