--- a/index.html
+++ b/index.html
@@ -145,23 +145,31 @@
       </div>
     </section>
 
-    <section id="goal" class="mt-5 mb-14">
-      <div class="py-4 px-7">
-        <div class="grid grid-cols-3">
-          <div
-            class="bg-white w-[300px] h-[300px] shadow-md rounded-md flex flex-col items-center justify-center text-center p-4"
-          >
-            <img
-              src="./image/service-icon/asset 4.png"
-              alt="Handshake Icon"
-              class="w-24 h-24 mb-4"
-            />
-            <h2 class="text-xl font-bold mb-2">Consumer Insight</h2>
-            <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
-            <p class="text-gray-600">
-              the east side to adeluxe apartment in move on up to the east side
-            </p>
-          </div>
+    <section id="goal" class=" mb-6">
+      <div class="grid grid-cols-3   ">
+        <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer  ">
+          <img class="w-24 flex justify-center" src="./image/service-icon/asset 4.png" alt="" />
+          <h2 class="text-2xl font-medium ">Consumer Insight</h2>
+           <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
+          <p class="text-lg text-gray-600 pt-2">
+            the east side to adeluxe apartment in move on up to the east side
+          </p>
+        </div>
+        <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer">
+          <img class="w-24 flex justify-center" src="./image/service-icon/asset 5.png" alt="" />
+          <h2 class="text-2xl font-medium ">Emerging Ideas</h2>
+           <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
+          <p class="text-lg text-gray-600 pt-2">
+            the east side to adeluxe apartment in move on up to the east side
+          </p>
+        </div>
+        <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer ">
+          <img class="w-24 flex justify-center" src="./image/service-icon/asset 6.png" alt="" />
+          <h2 class="text-2xl font-medium ">Thought Leadership</h2>
+           <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
+          <p class="text-lg text-gray-600 pt-2">
+            the east side to adeluxe apartment in move on up to the east side
+          </p>
         </div>
       </div>
     </section>
