--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </section>
 
     <section id="goal" class=" mb-6">
-      <div class="grid grid-cols-3   ">
+      <div class="grid grid-cols-1 md:grid-cols-3   ">
         <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer  ">
           <img class="w-24 flex justify-center" src="./image/service-icon/asset 4.png" alt="" />
           <h2 class="text-2xl font-medium ">Consumer Insight</h2>
