--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
       </div>
     </section>
 
+
+    <section>
+      
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
