--- a/index.html
+++ b/index.html
@@ -176,7 +176,14 @@
 
 
     <section>
-      
+        <div>
+            <div class="">
+
+            </div>
+            <div>
+
+            </div>
+        </div>
     </section>
     <script src="main.js"></script>
   </body>
