--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
 
           <button
-            class="hidden md:block bg-transparent border-2 border-[#001A57] rounded-[5px] px-5 py-1 hover:bg-[#001A57] transition cursor-pointer hover:text-white font-medium"
+            class="hidden md:block bg-transparent border-2 border-[#001A57] rounded-[5px] px-5 py-1 hover:bg-[#001A57] transition duration-300 cursor-pointer hover:text-white font-medium"
           >
             GET A QUOTES
           </button>
@@ -76,7 +76,7 @@
           >
             <li class="text-[#001A57] cursor-pointer ml-3">HOME</li>
             <div class="">/</div>
-            <li class="text-gray-600 hover:text-[#001A57] cursor-pointer ml-3">
+            <li class="text-gray-600 hover:text-[#001A57] cursor-pointer ml-3 ">
               PAGE
             </li>
             <div>/</div>
@@ -138,7 +138,7 @@
           SALES EFFICIENCY
         </h2>
         <button
-          class="bg-white hover:bg-[#001A57] px-8 py-3 text-[#001A57] hover:text-white transition cursor-pointer rounded-lg"
+          class="bg-white hover:bg-[#001A57] px-8 py-3 text-[#001A57] hover:text-white transition   duration-300  cursor-pointer rounded-lg"
         >
           CONTACT US
         </button>
@@ -146,7 +146,7 @@
     </section>
 
     <section id="goal" class=" mb-6">
-      <div class="grid grid-cols-1 md:grid-cols-3   ">
+      <div class="gap-y-2 md:gap-0 grid grid-cols-1 md:grid-cols-3   ">
         <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer  ">
           <img class="w-24 flex justify-center" src="./image/service-icon/asset 4.png" alt="" />
           <h2 class="text-2xl font-medium ">Consumer Insight</h2>
@@ -155,7 +155,7 @@
             the east side to adeluxe apartment in move on up to the east side
           </p>
         </div>
-        <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer">
+        <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition duration-300 cursor-pointer">
           <img class="w-24 flex justify-center" src="./image/service-icon/asset 5.png" alt="" />
           <h2 class="text-2xl font-medium ">Emerging Ideas</h2>
            <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
@@ -176,11 +176,11 @@
 
 
     <section>
-        <div>
-            <div class="">
-
+        <div class="px-5">
+            <div class="max-w-1/2 ">
+                <img src="./image/About-image-icon/asset 8.jpeg" alt="">
             </div>
-            <div>
+            <div class="max-w-1/2">
 
             </div>
         </div>
