--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                 <img src="./image/About-image-icon/asset 8.jpeg" alt="">
             </div>
             <div class="max-w-1/2">
-
+                <h1>heloo about that create</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nam!</p>
             </div>
         </div>
     </section>
