make about us section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           >
             <li class="text-[#001A57] cursor-pointer ml-3">HOME</li>
             <div class="">/</div>
-            <li class="text-gray-600 hover:text-[#001A57] cursor-pointer ml-3 ">
+            <li class="text-gray-600 hover:text-[#001A57] cursor-pointer ml-3">
               PAGE
             </li>
             <div>/</div>
@@ -138,35 +138,53 @@
           SALES EFFICIENCY
         </h2>
         <button
-          class="bg-white hover:bg-[#001A57] px-8 py-3 text-[#001A57] hover:text-white transition   duration-300  cursor-pointer rounded-lg"
+          class="bg-white hover:bg-[#001A57] px-8 py-3 text-[#001A57] hover:text-white transition duration-300 cursor-pointer rounded-lg"
         >
           CONTACT US
         </button>
       </div>
     </section>
 
-    <section id="goal" class=" mb-6">
-      <div class="gap-y-2 md:gap-0 grid grid-cols-1 md:grid-cols-3   ">
-        <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer  ">
-          <img class="w-24 flex justify-center" src="./image/service-icon/asset 4.png" alt="" />
-          <h2 class="text-2xl font-medium ">Consumer Insight</h2>
-           <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
+    <section id="goal" class="mb-6">
+      <div class="gap-y-2 md:gap-0 grid grid-cols-1 md:grid-cols-3">
+        <div
+          class="shadow-lg p-14 bg-[#E9E9E9] flex flex-col items-center text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer"
+        >
+          <img
+            class="w-24 flex justify-center"
+            src="./image/service-icon/asset 4.png"
+            alt=""
+          />
+          <h2 class="text-2xl font-medium">Consumer Insight</h2>
+          <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
           <p class="text-lg text-gray-600 pt-2">
             the east side to adeluxe apartment in move on up to the east side
           </p>
         </div>
-        <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition duration-300 cursor-pointer">
-          <img class="w-24 flex justify-center" src="./image/service-icon/asset 5.png" alt="" />
-          <h2 class="text-2xl font-medium ">Emerging Ideas</h2>
-           <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
+        <div
+          class="shadow-lg p-14 bg-[#E9E9E9] flex flex-col items-center text-center hover:border-b-4 hover:border-[#001A57] transition duration-300 cursor-pointer"
+        >
+          <img
+            class="w-24 flex justify-center"
+            src="./image/service-icon/asset 5.png"
+            alt=""
+          />
+          <h2 class="text-2xl font-medium">Emerging Ideas</h2>
+          <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
           <p class="text-lg text-gray-600 pt-2">
             the east side to adeluxe apartment in move on up to the east side
           </p>
         </div>
-        <div class="shadow-lg p-14  bg-[#E9E9E9] flex flex-col items-center  text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer ">
-          <img class="w-24 flex justify-center" src="./image/service-icon/asset 6.png" alt="" />
-          <h2 class="text-2xl font-medium ">Thought Leadership</h2>
-           <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
+        <div
+          class="shadow-lg p-14 bg-[#E9E9E9] flex flex-col items-center text-center hover:border-b-4 hover:border-[#001A57] transition cursor-pointer"
+        >
+          <img
+            class="w-24 flex justify-center"
+            src="./image/service-icon/asset 6.png"
+            alt=""
+          />
+          <h2 class="text-2xl font-medium">Thought Leadership</h2>
+          <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
           <p class="text-lg text-gray-600 pt-2">
             the east side to adeluxe apartment in move on up to the east side
           </p>
@@ -174,17 +192,35 @@
       </div>
     </section>
 
-
-    <section>
-        <div class="px-5">
-            <div class="max-w-1/2 ">
-                <img src="./image/About-image-icon/asset 8.jpeg" alt="">
-            </div>
-            <div class="max-w-1/2 ">
-                <h1 class="font-bold text-2xl">heloo about that create</h1>
-                <p class="font-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nam!</p>
-            </div>
+    <section id="About Us m" class="mt-30 h-[100vh]">
+      <div class="grid grid-cols-2 container px-7">
+        <div class="hidden md:block">
+          <img src="./image/About-image-icon/asset 8.jpeg" alt="" />
         </div>
+        <div class="flex flex-col items-center">
+          <h1 class="text-[40px] font-bold text-[#232323] uppercase">
+            About Our Company
+          </h1>
+          <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
+          <p class="text-[17px] text-gray-500">
+            A tale of a fateful trip that started from this tropic port aboard
+            this tiny ship today still wanted by the government they survive as
+            soldiers of fortune to a
+
+            <span class="md:pl-9">
+              deluxe apartment in the sky moving on up to the east side a
+              family.
+            </span>
+          </p>
+          <p class="mt-5 text-[17px] text-gray-500">
+            The government they survive as soldiers of fortune baby if you've
+            ever
+            <span class="md:pl-16"
+              >wondered the east side to a deluxe apartment.</span
+            >
+          </p>
+        </div>
+      </div>
     </section>
     <script src="main.js"></script>
   </body>
