make responsive about us section

--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
       </div>
     </section>
 
-    <section id="About Us m" class="mt-30 h-[100vh]">
+    <section id="About Us " class="mt-30 h-[100vh]">
       <div class="grid grid-cols-2 container px-7">
         <div class="hidden md:block">
           <img src="./image/About-image-icon/asset 8.jpeg" alt="" />
         </div>
-        <div class="flex flex-col items-center">
+        <div class="flex flex-col items-center justify-center">
           <h1 class="text-[40px] font-bold text-[#232323] uppercase">
             About Our Company
           </h1>
@@ -219,6 +219,7 @@
               >wondered the east side to a deluxe apartment.</span
             >
           </p>
+          <hr>
         </div>
       </div>
     </section>
