make update for about us section and make it responsive

--- a/index.html
+++ b/index.html
@@ -192,35 +192,31 @@
       </div>
     </section>
 
-    <section id="About Us " class="mt-30 h-[100vh]">
-      <div class="grid grid-cols-2 container px-7">
-        <div class="hidden md:block">
-          <img src="./image/About-image-icon/asset 8.jpeg" alt="" />
+    <section id="About Us " class="mt-30 h-1/2 md:h-[100vh] ">
+      <div class="flex px-9">
+          <!-- man image here -->
+        <div class="hidden md:flex w-1/2">
+          <img class="w-[90%] h-[90%]"  src="/image/About-image-icon/asset 8.jpeg" alt="" />
         </div>
-        <div class="flex flex-col items-center justify-center">
-          <h1 class="text-[40px] font-bold text-[#232323] uppercase">
-            About Our Company
-          </h1>
-          <hr class="w-9 border-t-4 border-gray-300 my-2 rounded-2xl" />
-          <p class="text-[17px] text-gray-500">
-            A tale of a fateful trip that started from this tropic port aboard
-            this tiny ship today still wanted by the government they survive as
-            soldiers of fortune to a
+          <!-- Contant about us here -->
+        <div class="md:w-1/2 text-center flex flex-col items-center ">
+            <h1 class="text-[32px] md:text-[40px] font-bold uppercase text-[#232323] ">About Our Company</h1>
+            <hr class="w-9 border-t-4 border-gray-300 my-5 rounded-2xl" />
+            <p class="text-[17px] text-gray-500 ">A tale of a fateful trip that started from this tropic port aboard this tiny ship today still wanted by the government they survive as soldiers of fortune to a deluxe apartment in the sky moving on up to the east side a family.</p>
+            <p class="text-[17px] text-gray-500 mt-7">The government they survive as soldiers of fortune baby if you've ever wondered the east side to a deluxe apartment.</p>
+           <hr class="w-full border-t-1 border-gray-300 my-8  border-solid" />
 
-            <span class="md:pl-9">
-              deluxe apartment in the sky moving on up to the east side a
-              family.
-            </span>
-          </p>
-          <p class="mt-5 text-[17px] text-gray-500">
-            The government they survive as soldiers of fortune baby if you've
-            ever
-            <span class="md:pl-16"
-              >wondered the east side to a deluxe apartment.</span
-            >
-          </p>
-          <hr>
+           <!-- icons image here -->
+        <div class="flex gap-6">
+           
+            <img class="w-30 " src="/image/About-image-icon/vision-1-02.png" alt="">
+             <div class="border-l border-dashed border-gray-300 "></div>
+            <img class="w-30 " src="/image/About-image-icon/mision.png" alt="">
+            <div class="border-l border-dashed border-gray-300 "></div>
+            <img class="w-30" src="/image/About-image-icon/Goal.png" alt="">
         </div>
+        </div>
+        
       </div>
     </section>
     <script src="main.js"></script>
