--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         class="bg-[#000F32] px-[40px] md:py-[25px] py-[20px] md:w-[90%] mx-auto text-white relative"
       >
         <div class="flex justify-between gap-6 items-center relative">
-          <ul class="hidden md:flex gap-6 sticky top-0">
+          <ul class="hidden md:flex gap-6 ">
             <li class="text-white cursor-pointer">HOME</li>
             <div>/</div>
             <li class="text-gray-400 hover:text-white cursor-pointer">PAGE</li>
@@ -72,7 +72,7 @@
           </ul>
           <ul
             id="menu"
-            class="flex-col gap-6 bg-white w-[100%] justify-center absolute top-[40px] font-medium py-2 Z-50 z-10"
+            class="flex-col gap-6 bg-white w-[100%] justify-center absolute top-[40px] font-medium py-2 z-10 "
           >
             <li class="text-[#001A57] cursor-pointer ml-3">HOME</li>
             <div class="">/</div>
@@ -221,7 +221,9 @@
     </section>
 
 
-    <section></section>
+    <section>
+        <div></div>
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
