--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@
 
 
     <section>
-        <div></div>
+        <div>
+          <h1>Lorem ipsum dolor sit amet.</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, inventore.</p>
+        </div>
     </section>
     <script src="main.js"></script>
   </body>
