--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
         <div>
           <h1>Lorem ipsum dolor sit amet.</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, inventore.</p>
+          <div><p>Lorem, ipsum.</p></div>
         </div>
     </section>
     <script src="main.js"></script>
