add service bg fixes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         class="bg-[#000F32] px-[40px] md:py-[25px] py-[20px] md:w-[90%] mx-auto text-white relative"
       >
         <div class="flex justify-between gap-6 items-center relative">
-          <ul class="hidden md:flex gap-6">
+          <ul class="hidden md:flex gap-6 ">
             <li class="text-white cursor-pointer">HOME</li>
             <div>/</div>
             <li class="text-gray-400 hover:text-white cursor-pointer">PAGE</li>
@@ -124,7 +124,7 @@
       </div>
     </section>
 
-  <!-- hero cover  here -->
+    <!-- hero cover  here -->
     <section
       id="hero"
       class="bg-gray-200 h-[60vh] md:h-[100vh] bg-[url('/image/hero-image/asset-1.jpeg')] bg-cover bg-center relative"
@@ -194,7 +194,7 @@
       </div>
     </section>
 
-    <section id="About Us " class="mt-30 h-1/2 md:h-[100vh]">
+    <section id="About Us " class="mt-28 md:mb-[100px]">
       <div class="flex px-9">
         <!-- man image here -->
         <div class="hidden md:flex w-1/2">
@@ -240,8 +240,34 @@
       </div>
     </section>
 
+    <section
+      id="innovative"
+      class="h-[50vh] bg-[url('/image/fixed-image/asset-28.jpeg')] bg-center bg-cover mb-14 relative bg-fixed"
+    >
+
+    <!-- overlay -->
+
+  <div class="absolute inset-0 bg-[#001A57] opacity-50"></div>
+
+          <!-- contant -->
+      <div class="text-center absolute top-[50%] left-[50%] transform -translate-x-1/2 -translate-y-1/2  ">
+        <h3 class="text-3xl font-bold text-white ">
+          We provide high quality services & innovative solutions for the
+          realiable growth
+        </h3>
+        <button class="mt-6 bg-[#001A57] hover:bg-[#000F32] text-white py-3 px-8 rounded-lg font-semibold">GET A QUOTES</button>
+      </div>
+      
+    </section>
+
+
 
     
+
+
+
+
+
 
     <script src="main.js"></script>
   </body>
