--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div
         id="navbar-linear"
-        class="bg-[#000F32] px-[40px] md:py-[25px] py-[20px] md:w-[90%] mx-auto text-white relative"
+        class="bg-[#000F32] px-[40px] md:py-[25px] py-[20px] md:w-[90%] mx-auto text-white sticky z-50 top-0"
       >
         <div class="flex justify-between gap-6 items-center relative">
           <ul class="hidden md:flex gap-6 ">
@@ -242,7 +242,7 @@
 
     <section
       id="innovative"
-      class="h-[50vh] bg-[url('/image/fixed-image/asset-28.jpeg')] bg-center bg-cover mb-14 relative bg-fixed"
+      class="h-[70vh] md:h-[50vh] bg-[url('/image/fixed-image/asset-28.jpeg')] bg-center bg-cover mb-14 relative bg-fixed"
     >
 
     <!-- overlay -->
