small change for last update design

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           We provide high quality services & innovative solutions for the
           realiable growth
         </h3>
-        <button class="mt-6 bg-[#001A57] hover:bg-[#000F32] text-white py-3 px-8 rounded-lg font-semibold">GET A QUOTES</button>
+        <button class="mt-6 bg-[#001A57] hover:bg-[#000F32] text-white py-3 px-8 rounded-lg font-semibold cursor-pointer">GET A QUOTES</button>
       </div>
       
     </section>
