--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
 
 
       <section>
-              
+              <h3>new section begin from here</h3>
+              <p>start</p>
       </section>
     
 
