--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@
       <section>
               <h3>new section begin from here</h3>
               <p>start</p>
+              <div>
+                  <h3>new section begin from here</h3>
+              <p>start</p>
+              </div>
       </section>
     
 
