--- a/index.html
+++ b/index.html
@@ -262,12 +262,39 @@
 
 
       <section>
-              <h3>new section begin from here</h3>
-              <p>start</p>
-              <div>
-                  <h3>new section begin from here</h3>
-              <p>start</p>
-              </div>
+            <h1 class="text-[32px] md:text-[40px] font-bold uppercase text-[#232323] text-center">Our SERVICES</h1>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6">
+  <!-- Card 1 -->
+  <div class="flex bg-white rounded-lg shadow hover:shadow-lg transition">
+    <img src="https://via.placeholder.com/150" alt="Business Services" class="w-32 h-32 object-cover rounded-l-lg">
+    <div class="p-4">
+      <h3 class="text-lg font-semibold">Business Services</h3>
+      <p class="text-gray-500 text-sm mt-1">The tiny ship today stiller</p>
+      <a href="#" class="text-blue-700 font-semibold mt-3 inline-block hover:underline">READ MORE &gt;</a>
+    </div>
+  </div>
+
+  <!-- Card 2 -->
+  <div class="flex bg-white rounded-lg shadow hover:shadow-lg transition">
+    <img src="https://via.placeholder.com/150" alt="Consumer Product" class="w-32 h-32 object-cover rounded-l-lg">
+    <div class="p-4">
+      <h3 class="text-lg font-semibold">Consumer Product</h3>
+      <p class="text-gray-500 text-sm mt-1">The tiny ship today stiller</p>
+      <a href="#" class="text-blue-700 font-semibold mt-3 inline-block hover:underline">READ MORE &gt;</a>
+    </div>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="flex bg-white rounded-lg shadow hover:shadow-lg transition">
+    <img src="https://via.placeholder.com/150" alt="Financial Services" class="w-32 h-32 object-cover rounded-l-lg">
+    <div class="p-4">
+      <h3 class="text-lg font-semibold">Financial Services</h3>
+      <p class="text-gray-500 text-sm mt-1">The tiny ship today stiller</p>
+      <a href="#" class="text-blue-700 font-semibold mt-3 inline-block hover:underline">READ MORE &gt;</a>
+    </div>
+  </div>
+</div>
+
       </section>
     
 
