fix some design

--- a/index.html
+++ b/index.html
@@ -261,12 +261,14 @@
     </section>
 
 
-      <section>
+      <section class="mb-36">
            <div class="flex flex-col items-center">
               <h1 class="text-[32px] md:text-[40px] font-bold uppercase text-[#232323] text-center">Our SERVICES</h1>
-            <hr class="w-9 border-t-4 border-gray-300 my-5 rounded-2xl" />
-            <p class="text-gray-500 text-center">A tale of a fateful trip that started from this tropic port aboard this tiny ship today stillers</p>
+            <hr class="w-9 border-t-4 border-gray-300 my-3 rounded-2xl" />
+            <p class="text-gray-500 text-center text-[17px] max-w-[550px] md:max-w-7xl >A tale of a fateful trip that started from this tropic port aboard this tiny ship today stillers</p>
            </div>
+
+
               
 
       </section>
