--- a/index.html
+++ b/index.html
@@ -281,7 +281,9 @@
       </div>
 
       <!-- grid card -->
-      <div class="grid grid-cols-1 md:grid-cols-3 mt-16 px-12 space-x-6">
+      <div
+        class="grid grid-cols-1 md:grid-cols-3 mt-16 px-12 space-y-6 md:space-x-6"
+      >
         <!-- card 1 -->
         <div
           id="card"
@@ -341,8 +343,10 @@
           </div>
         </div>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-3 mt-8 px-12 space-x-6">
-        <!-- card 2 -->
+      <div
+        class="grid grid-cols-1 md:grid-cols-3 mt-8 px-12 space-y-6 md:space-x-6"
+      >
+        <!-- grid card 2 -->
         <div
           id="card"
           class="flex gap-5 bg-white shadow hover:shadow-lg cursor-pointer rounded-lg transition"
@@ -400,6 +404,14 @@
             <a class="text-[#001A57] font-medium" href="#">READ MORE> </a>
           </div>
         </div>
+      </div>
+
+      <div class="flex flex-col items-center mt-7">
+        <h1 class="text-[24px]">
+          You can also send us an email and we’ll get in touch shortly, or Call
+          us
+        </h1>
+        <h3 class="text-[#001A57] text-[23px]">info@support.com (or) +1 234 6780 900</h3>
       </div>
     </section>
 
