start new section call self identify

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       </div>
     </section>
 
-    <section class="mb-36">
+    <section class="mb-28">
       <div class="flex flex-col items-center">
         <h1
           class="text-[32px] md:text-[40px] font-bold uppercase text-[#232323] text-center"
@@ -407,14 +407,18 @@
       </div>
 
       <div class="flex flex-col items-center mt-7">
-        <h1 class="text-[24px]">
-          You can also send us an email and we’ll get in touch shortly, or Call
-          us
+        <h1 class="text-[24px] text-[#232323]">
+          You can also send us an email and we’ll get in <br> <span class="ml-28">touch shortly, or Call
+          us</span>
         </h1>
         <h3 class="text-[#001A57] text-[23px]">info@support.com (or) +1 234 6780 900</h3>
       </div>
     </section>
+    <section>
+        <div class="bg-[url('/image/fixed-image/asset-29.jpeg')] bg-cover bg-center h-[100vh] bg-fixed ">
 
+        </div>
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
