--- a/index.html
+++ b/index.html
@@ -415,8 +415,11 @@
       </div>
     </section>
     <section>
-        <div class="bg-[url('/image/fixed-image/asset-29.jpeg')] bg-cover bg-center h-[100vh] bg-fixed ">
-
+        <div class="bg-[url('/image/fixed-image/asset-29.jpeg')] bg-cover bg-center h-[100vh] bg-fixed relative ">
+            <div>
+                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, commodi?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi beatae aperiam fugit quidem expedita libero provident, repellat nesciunt eius saepe!</p>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
