--- a/index.html
+++ b/index.html
@@ -419,9 +419,13 @@
             <div>
                 <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, commodi?</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi beatae aperiam fugit quidem expedita libero provident, repellat nesciunt eius saepe!</p>
+                <button>Get Quate</button>
             </div>
         </div>
     </section>
+
+
+    
     <script src="main.js"></script>
   </body>
 </html>
