start new section Team

--- a/index.html
+++ b/index.html
@@ -424,6 +424,14 @@
         </div>
     </section>
 
+
+    <section class="mt-24">
+        <div class="text-center">
+            <h1 class="text-4xl font-bold text-[#232323]">OUR TEAM</h1>
+            <p class="text-gray-500">A tale of a fateful trip that started from this tropic port aboard this tiny ship today stillers</p>
+        </div>
+    </section>
+
     
 
     
