start new section

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
       <div class="text-center flex flex-col items-center">
         <h1 class="text-4xl font-bold text-[#232323]">OUR TEAM</h1>
         <hr class="w-9 border-t-4 border-gray-300 my-4 rounded-2xl" />
-        <p class="text-gray-500 text-[17px] max-w-[420px] md:max-w-[700px] ">
+        <p class="text-gray-500 text-[17px] max-w-[420px] md:max-w-[700px]">
           A tale of a fateful trip that started from this tropic port aboard
           this tiny ship today stillers
         </p>
@@ -447,8 +447,9 @@
 
       <div>
         <div class="grid grid-cols-1 md:grid-cols-4 px-10 mt-12 gap-9">
-
-          <div class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer">
+          <div
+            class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer"
+          >
             <img class="w-full" src="./image/Team-image/asset 15.jpeg" alt="" />
             <h2 class="pt-4 text-xl font-medium text-gray-800">
               Richards Mills
@@ -456,15 +457,17 @@
             <p class="text-gray-500 italic">Sales Consultant</p>
           </div>
 
-          <div class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer">
+          <div
+            class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer"
+          >
             <img class="w-full" src="./image/Team-image/asset 16.jpeg" alt="" />
-            <h2 class="pt-4 text-xl font-medium text-gray-800">
-              Mike Hussey
-            </h2>
+            <h2 class="pt-4 text-xl font-medium text-gray-800">Mike Hussey</h2>
             <p class="text-gray-500 italic">Founder, CEO</p>
           </div>
 
-          <div class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer">
+          <div
+            class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer"
+          >
             <img class="w-full" src="./image/Team-image/asset 17.jpeg" alt="" />
             <h2 class="pt-4 text-xl font-medium text-gray-800">
               Jenilia D’sosa
@@ -472,14 +475,25 @@
             <p class="text-gray-500 italic">Marketing Lead</p>
           </div>
 
-          <div class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer">
+          <div
+            class="shadow hover:shadow-lg pb-[12px] text-center cursor-pointer"
+          >
             <img class="w-full" src="./image/Team-image/asset 18.jpeg" alt="" />
-            <h2 class="pt-4 text-xl font-medium text-gray-800">
-              David Warner
-            </h2>
+            <h2 class="pt-4 text-xl font-medium text-gray-800">David Warner</h2>
             <p class="text-gray-500 italic">SEO Analyst</p>
           </div>
-          
+        </div>
+      </div>
+    </section>
+
+    <section class="">
+      <div
+        class="h-[60vh] md:h-[100vh] bg-[url('/image/map_pattener/1.1.png')] bg-no-repeat bg-center bg-contain"
+      >
+        <div class="h-[60vh] md:h-[100vh] bg-white/65"></div>
+        <div class="flex f">
+          <p>Company Success</p>
+          <h1>Some fun facts about our consulting</h1>
         </div>
       </div>
     </section>
