--- a/index.html
+++ b/index.html
@@ -488,30 +488,30 @@
 
    <section class="relative h-[60vh] md:h-[100vh] mt-20">
       <div class="absolute inset-0 bg-[url('/image/map_pattener/1.1.png')] bg-no-repeat bg-center bg-contain"></div>
-        <div class=" absolute inset-0  bg-white/65"></div>
+        <div class=" absolute inset-0  bg-white/65 "></div>
         <div class="relative z-10 flex flex-col items-center justify-center h-full ">
-          <p class="text-2xl">Company Success</p>
-          <h1 class="text-4xl">Some fun facts about our consulting</h1>
+          <p class="text-[22px] text-[#001A57] font-medium my-5">Company Success</p>
+          <h1 class="text-[42px] text-[#232323] font-medium">Some fun facts about our consulting</h1>
           
-          <div class="flex gap-20 mt-7 text-center">
+          <div class="flex gap-20 mt-12 text-center ">
               <div>
-                  <h1>30+</h1>
+                  <h1 class="text-7xl font-light text-[#001A57] ">30<span class="text-[42px] font-light">+</span></h1>
                   <p>Years of Excellence</p>
               </div>
               <div>
-                  <h1>100%</h1>
+                  <h1 class="text-7xl font-light text-[#001A57]">100<span class="text-[42px] font-light">%</span></h1>
                   <p>Client Satisfaction</p>
               </div>
               <div>
-                  <h1>53k</h1>
+                  <h1 class="text-7xl font-light text-[#001A57]">53<span class="text-[42px] font-light">k</span></h1>
                   <p>YCases Completed</p>
               </div>
               <div>
-                  <h1>24</h1>
+                  <h1 class="text-7xl font-light text-[#001A57]">24</h1>
                   <p>Consultants</p>
               </div>
           </div>
-          <button class="mt-16">VIEW CASE STUDIES</button>
+          <button class="mt-16 bg-[#001A57] hover:bg-[#000F32] cursor-pointer py-4 px-10 rounded-lg text-white">VIEW CASE STUDIES</button>
         </div>
     </section>
 
