fix logic error

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
       </div>
     </section>
 
-    <section class="mt-24 h-screen">
+    <section class="mt-24 ">
       <div class="text-center flex flex-col items-center">
         <h1 class="text-4xl font-bold text-[#232323]">OUR TEAM</h1>
         <hr class="w-9 border-t-4 border-gray-300 my-4 rounded-2xl" />
@@ -486,7 +486,7 @@
       </div>
     </section>
 
-   <section class="relative h-[60vh] md:h-[100vh] mt-20">
+   <section class="relative min-h-[60vh] md:min-h-[100vh] mt-20">
       <div class="absolute inset-0 bg-[url('/image/map_pattener/1.1.png')] bg-no-repeat bg-center bg-contain"></div>
         <div class=" absolute inset-0  bg-white/65 "></div>
         <div class="relative z-10 flex flex-col items-center justify-center h-full ">
